hphp/hack/test/typecheck/unbound_name/cast.php
<?hh

function test(mixed $obj): void {
  $x = (TNotFound)$obj;
}
